reworked multi tenancy and clone from different tenant and removed some warnings